--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -428,7 +428,7 @@
                 <span>Usuários</span>
             </a>
             
-            <a href="{% url 'admin:index' %}" class="nav-link" target="_blank">
+            <a href="{% url 'settings_view' %}" class="nav-link {% if 'configuracoes' in request.path %}active{% endif %}">
                 <i class="bi bi-gear"></i>
                 <span>Configurações</span>
             </a>
